added media query for Sumsung Galaxsy S8

--- a/index.css
+++ b/index.css
@@ -160,3 +160,17 @@ small {
   }
 
 }
+
+@media only screen and (max-width: 360px) {
+ 
+  
+  main {
+    display: flex;
+    height: 600px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+ 
+
+}
